--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@solana/spl-token-registry": "^0.2.114",
     "@solana/web3.js": "=1.21.0",
     "@solendprotocol/common": "=1.1.43",
+    "@switchboard-xyz/switchboard-api": "^0.2.160",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
