--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@solana/spl-token": "^0.1.4",
     "@solana/spl-token-registry": "^0.2.114",
     "@solana/web3.js": "=1.21.0",
-    "@solendprotocol/common": "=1.1.64",
     "@switchboard-xyz/switchboard-api": "^0.2.160",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
+    "got": "^9.6.0",
     "buffer-layout": "^1.2.1",
     "dotenv": "^10.0.0",
     "hot-shots": "^8.5.0",
