--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
     "@pythnetwork/client": "^2.0.0",
     "@solana/spl-token": "^0.1.4",
     "@solana/spl-token-registry": "^0.2.114",
-    "@solana/web3.js": "=1.21.0",
+    "@solana/web3.js": "=1.35.1",
     "@switchboard-xyz/switchboard-api": "^0.2.160",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
-    "got": "^9.6.0",
     "buffer-layout": "^1.2.1",
     "dotenv": "^10.0.0",
+    "got": "^9.6.0",
     "hot-shots": "^8.5.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
+    "npm": "^8.5.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "underscore": "^1.13.1"
