use new liquidateObligationAndRedeem instruction

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,19 +9,8 @@ services:
     environment:
       - APP=production
       - THROTTLE=1900 # Throttle not avoid rate limiting
-      - MARKET=4UpD2fh7xH3VP9QQaXtsS1YY3bxzWhtfpks7FatyKvdY # Lending market for main pool
-    secrets:
-      - keypair # secret to encrypte wallet details in container
-
-  liquidator-turbo-sol:
-    restart: unless-stopped
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - APP=production
-      - THROTTLE=1900 # Throttle not avoid rate limiting
-      - MARKET=7RCz8wb6WXxUhAigok9ttgrVgDFFFbibcirECzWSBauM # Lending market for TURBO SOL pool
+      # Uncomment line below and specify lending market if you only want to target a single pool
+      # - MARKET=4UpD2fh7xH3VP9QQaXtsS1YY3bxzWhtfpks7FatyKvdY
     secrets:
       - keypair # secret to encrypte wallet details in container
 
