--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "@solana/spl-token": "^0.1.4",
     "@solana/spl-token-registry": "^0.2.114",
     "@solana/web3.js": "1.33.0",
-    "@switchboard-xyz/switchboard-api": "^0.2.160",
     "@switchboard-xyz/sbv2-lite": "^0.1.0",
+    "@switchboard-xyz/switchboard-api": "^0.2.160",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
-    "got": "^9.6.0",
     "buffer-layout": "^1.2.1",
     "dotenv": "^10.0.0",
+    "got": "^9.6.0",
     "hot-shots": "^8.5.0",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
+    "snake-case": "^3.0.4",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "underscore": "^1.13.1"
