--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,22 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      # production or devnet
       - APP=production
-      - THROTTLE=1900 # Throttle not avoid rate limiting
-      # Uncomment line below and specify lending market if you only want to target a single pool
-      # - MARKET=4UpD2fh7xH3VP9QQaXtsS1YY3bxzWhtfpks7FatyKvdY
+      # A private RPC provider is strongly recommended. A public rpc will often fail and crash the liquidator
+      - RPC_ENDPOINT=
+      # Throttle not avoid rate limiting
+      - THROTTLE=0
+      # Padding against each wallet rebalancing target to avoid unnecessary rebalancing.
+      # If wallet is expected to hold 2 ETH. The rebalancer will buy if wallet has less than 2 * (1-REBALANCE_PADDING) ETH and sell
+      # if wallet has over 2 * (1+REBALANCE_PADDING) ETH
+      - REBALANCE_PADDING=0.2
+      # Specify target below for wallet auto rebalancing. Ensure to keep the format "tokenA:amount tokenB:amount ..."
+      # USDC is the base currency that every other token will swap against so besure to allocate an access amount of USDC
+      # Note: the amount is in token unit so ETH:2 means we'll always rebalance to have 2 ETH
+      # - TARGETS=USDC:100 USDT:5 scnSOL:0.5 SOL:0.5
+      # For targeting specific markets. All markets can be found in https://api.solend.fi/v1/markets/configs?scope=all
+      # - MARKET=4UpD2fh7xH3VP9QQaXtsS1YY3bxzWhtfpks7FatyKvdY,7tiNvRHSjYDfc6usrWnSNPyuN68xQfKs1ZG2oqtR5F46,GktVYgkstojYd8nVXGXKJHi7SstvgZ6pkQqQhUPD7y7Q
     secrets:
       - keypair # secret to encrypte wallet details in container
 
