--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@jup-ag/core": "=1.0.0-beta.22",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
     "@pythnetwork/client": "^2.0.0",
     "@solana/spl-token": "^0.1.4",
