--- a/package.json
+++ b/package.json
@@ -19,19 +19,26 @@
   "license": "ISC",
   "dependencies": {
     "@jup-ag/core": "=1.0.0-beta.22",
+    "@orca-so/common-sdk": "^0.1.0",
+    "@orca-so/sdk": "^1.2.25",
+    "@orca-so/whirlpool-sdk": "^0.4.1",
+    "@orca-so/whirlpools-sdk": "^0.5.1",
+    "@project-serum/anchor": "^0.25.0",
+    "@project-serum/serum": "^0.13.65",
     "@project-serum/sol-wallet-adapter": "^0.2.0",
     "@pythnetwork/client": "^2.0.0",
-    "@solana/spl-token": "^0.1.4",
-    "@solana/spl-token-registry": "^0.2.114",
-    "@solana/web3.js": "1.33.0",
-    "@switchboard-xyz/switchboard-api": "^0.2.160",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/spl-token": "^0.2.0",
+    "@solana/web3.js": "^1.53.0",
     "@switchboard-xyz/sbv2-lite": "^0.1.0",
+    "@switchboard-xyz/switchboard-api": "^0.2.160",
     "bignumber.js": "^9.0.1",
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
-    "got": "^9.6.0",
     "buffer-layout": "^1.2.1",
     "dotenv": "^10.0.0",
+    "goblingold-sdk": "^1.2.47",
+    "got": "^12.4.1",
     "hot-shots": "^8.5.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
@@ -54,7 +61,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.3.0",
     "jest-junit": "^10.0.0",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.19",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
     "typescript": "^4.4.4"
