--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bs58": "^4.0.1",
     "buffer-layout": "^1.2.1",
     "dotenv": "^10.0.0",
+    "ggoldca-sdk": "^0.0.17",
     "goblingold-sdk": "^1.2.47",
     "got": "^12.4.1",
     "hot-shots": "^8.5.0",
