--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "ggoldca-sdk": "^0.0.17",
     "got": "^9.6.0",
     "hot-shots": "^8.5.0",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
+    "snake-case": "^3.0.4",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "underscore": "^1.13.1"
